--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /Project/Objects/*
 /Project/Listings/*
 /Project/EventRecorderStub.scvd
-/Project/RTOS_V1.uvguix.Abishek
+/Project/RTOS_V1.uvguix.*
 /Project/RTOS_V1.uvoptx
