added mutex file

--- a/Project/RTOS_V1.uvprojx
+++ b/Project/RTOS_V1.uvprojx
@@ -422,6 +422,11 @@
               <FileType>1</FileType>
               <FilePath>..\OS\queues.c</FilePath>
             </File>
+            <File>
+              <FileName>mutex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\mutex.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
